--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </p>
             <p class="text-md-right">
               <small>Latest Resume Updated</small>
-              <span class="badge badge-secondary">2020. 04. 12</span>
+              <span id="passedTime" class="badge badge-secondary">2020. 10. 16(D+)</span>
             </p>
 
             <p class="text-md-right" style="font-family:'Parisienne', cursive;font-size:1.5em">Lee SungHee</p>
@@ -476,22 +476,22 @@
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col-md-3 col-12 text-md-right">
-                      <h4 class="gray">2019. 12 ~ 2020. 03</h4>
-                    </div>
-                    <div class="col-md-9 col-12">
-                      <h4>E-scored.com 런칭<small class="ml-5 blue"
-                          onclick='window.open("http://e-scored.com", "_blank")'>View</small></h4>
-                      <i class="gray">토이프로젝트</i>
-                      <ul class="pt-3">
-                        <li>Python Django를 활용한 종합게임 커뮤니티</li>
-                        <li>처음 지정해둔 목표치인 모바일 우선적인 HTML, CSS마크업 및 jQuery를 활용한 디자인적 요소 추가</li>
-                        <li>React가 아닌 HTML을 사용하여서 template화를 하여 관리를 하고 module화를 해볼 수 있는 좋은 경험이였다.</li>
-                        <li>추후 유지보수가 유리하도록 컴포넌트화하여 작업하였다.</li>
-                      </ul>
-                    </div>
+                  <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2019. 12 ~ 2020. 03</h4>
                   </div>
-                  <hr />
+                  <div class="col-md-9 col-12">
+                    <h4>E-scored.com 런칭<small class="ml-5 blue"
+                        onclick='window.open("http://e-scored.com", "_blank")'>View</small></h4>
+                    <i class="gray">토이프로젝트</i>
+                    <ul class="pt-3">
+                      <li>Python Django를 활용한 종합게임 커뮤니티</li>
+                      <li>처음 지정해둔 목표치인 모바일 우선적인 HTML, CSS마크업 및 jQuery를 활용한 디자인적 요소 추가</li>
+                      <li>React가 아닌 HTML을 사용하여서 template화를 하여 관리를 하고 module화를 해볼 수 있는 좋은 경험이였다.</li>
+                      <li>추후 유지보수가 유리하도록 컴포넌트화하여 작업하였다.</li>
+                    </ul>
+                  </div>
+                </div>
+                <hr />
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
                     <h4 class="gray">2019. 10 ~ 2020. 01</h4>
@@ -618,6 +618,16 @@
       <!-- footer End -->
     </div>
   </main>
+  <script>
+    $(document).ready(function () {
+      var today = new Date();
+      var lastUpdateDay = new Date(2020, 9, 15);
+      var passedTime = today.getTime() - lastUpdateDay.getTime();
+      var passedDate = Math.floor(passedTime/(24*60*60*1000));
+      $("#passedTime").html( today.toLocaleDateString()+"(D+"+passedDate+")" );
+      // 2020. 10. 16(D+20)
+    })
+  </script>
 </body>
 
 </html>
