--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
       var lastUpdateDay = new Date(2020, 9, 15);
       var passedTime = today.getTime() - lastUpdateDay.getTime();
       var passedDate = Math.floor(passedTime/(24*60*60*1000));
-      $("#passedTime").html( today.toLocaleDateString()+"(D+"+passedDate+")" );
+      $("#passedTime").html( "2020. 10. 16.(D+"+passedDate+")" );
       // 2020. 10. 16(D+20)
     })
   </script>
