--- a/index.html
+++ b/index.html
@@ -447,6 +447,47 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2020. 09 ~ 2020. 10</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>종이의 집<small class="ml-5 blue" onclick='openPdf($(this).data())'
+                        data-url="./static/pdfs/java-project(paperhouse).pdf">View</small></h4>
+                    <i class="gray">비트캠프</i>
+                    <ul class="pt-3">
+                      <li>Java, Spring Boot, Spring Security, Oracle, Thymeleaf 등을 활용하여 제작한 플랫폼</li>
+                      <li>UI작업과 프론트엔드작업</li>
+                      <li>Oracle Database Table설계 작업</li>
+                      <li>Qna 게시판 구현</li>
+                      <li>공지사항 게시판 구현</li>
+                      <li>Thymeleaf를 활용한 template화 작업</li>
+                    </ul>
+                  </div>
+                </div>
+                <hr />
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2020. 08 ~ 2020. 08</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>Hoboard<small class="ml-5 blue" onclick='openPdf($(this).data())'
+                        data-url="./static/pdfs/java-project(hoboard).pdf">View</small></h4>
+                    <i class="gray">비트캠프</i>
+                    <ul class="pt-3">
+                      <li>Java, Oracle, Html 등을 활용하여 제작한 플랫폼</li>
+                      <li>UI작업과 프론트엔드작업</li>
+                      <li>Kakao Map API를 활용하여 현재 위치기반 데이터와 카테고리별 검색</li>
+                      <li>다음주소 API를 활용하여 회원가입시 실제 주소 입력</li>
+                      <li>DB에 등록되는 정보들에 대한 트랜잭션 관리</li>
+                      <li>full calendar 라이브러리를 사용하여 예약하기 UI구성 및 java servlet을 통한 기능 구현</li>
+                      <li>jsp의 include를 사용하여 header와 footer의 모듈화 및 EL태그를 활용</li>
+                      <li>기능별 package를 만들어 관리</li>
+                      <li>공통적인 function들의 무분별한 재사용을 막기 위한 Util클래스의 static화</li>
+                    </ul>
+                  </div>
+                </div>
+                <hr />
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
                     <h4 class="gray">2019. 05 ~ 2019. 07</h4>
                   </div>
                   <div class="col-md-9 col-12">
@@ -621,10 +662,10 @@
   <script>
     $(document).ready(function () {
       var today = new Date();
-      var lastUpdateDay = new Date(2020, 9, 15);
+      var lastUpdateDay = new Date(2020, 11, 04);
       var passedTime = today.getTime() - lastUpdateDay.getTime();
       var passedDate = Math.floor(passedTime/(24*60*60*1000));
-      $("#passedTime").html( "2020. 10. 16.(D+"+passedDate+")" );
+      $("#passedTime").html( "2020. 11. 04.(D+"+passedDate+")" );
       // 2020. 10. 16(D+20)
     })
   </script>
