--- a/index.html
+++ b/index.html
@@ -662,10 +662,15 @@
   <script>
     $(document).ready(function () {
       var today = new Date();
+      var y, m, d;
+      y = today.getFullYear();
+      m = today.getMonth()+1;
+      d = today.getDate();
+
       var lastUpdateDay = new Date(2020, 11, 04);
       var passedTime = today.getTime() - lastUpdateDay.getTime();
-      var passedDate = Math.floor(passedTime/(24*60*60*1000));
-      $("#passedTime").html( "2020. 11. 04.(D+"+passedDate+")" );
+      var passedDate = (Math.floor(passedTime/(24*60*60*1000)) > 0) ? Math.floor(passedTime/(24*60*60*1000)) : 0;
+      $("#passedTime").html( y+". "+m+". "+d+".(D+"+passedDate+")" );
       // 2020. 10. 16(D+20)
     })
   </script>
