--- a/index.html
+++ b/index.html
@@ -271,8 +271,12 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-light">1</span>
+                        <span class="badge badge-pill badge-light">2</span>
                         AWS
+                      </li>
+                      <li>
+                        <span class="badge badge-pill badge-light">1</span>
+                        Docker
                       </li>
                     </ul>
                   </div>
