--- a/index.html
+++ b/index.html
@@ -598,6 +598,45 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2020. 11 ~ 2020. 12</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>42 Seoul</h4>
+                    <i class="gray">42 Seoul La Piscine</i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2020. 05 ~ 2020. 10</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>비트캠프</h4>
+                    <i class="gray">Smart Web & Content 개발자(Java)</i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2018. 11 ~ 2019. 05</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>하이미디어 아카데미</h4>
+                    <i class="gray">스마트웹콘텐츠제작 웹디자인&웹퍼블리셔</i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
                     <h4 class="gray">2012. 03 ~ 2015. 02</h4>
                   </div>
                   <div class="col-md-9 col-12">
