--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </p>
             <p class="text-md-right">
               <small>Latest Resume Updated</small>
-              <span id="passedTime" class="badge badge-secondary">2020. 10. 16(D+)</span>
+              <span id="passedTime" class="badge badge-secondary"></span>
             </p>
 
             <p class="text-md-right" style="font-family:'Parisienne', cursive;font-size:1.5em">Lee SungHee</p>
@@ -704,15 +704,15 @@
   </main>
   <script>
     $(document).ready(function () {
-      var today = new Date(2020, 11, 09);
+      var today = new Date();
       var y, m, d;
       y = today.getFullYear();
       m = today.getMonth();
       d = today.getDate();
-      var lastUpdateDay = new Date(2020, 11, 4);
-      var passedTime = today.getTime() - lastUpdateDay.getTime();
+      var lastUpdateDay = new Date(2020, m, 14);
+      var passedTime = lastUpdateDay.getTime() - today.getTime();
       var passedDate = (Math.floor(passedTime/(24*60*60*1000)) > 0) ? Math.floor(passedTime/(24*60*60*1000)) : 0;
-      $("#passedTime").html( y+". "+m+". "+d+".(D+"+passedDate+")" );
+      $("#passedTime").html( y+". "+(m+1)+". "+d+".(D+"+passedDate+")" );
     })
   </script>
 </body>
