--- a/index.html
+++ b/index.html
@@ -602,6 +602,20 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2020. 12 ~ </h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>42 Seoul</h4>
+                    <i class="gray">42 Seoul Cursus</i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
                     <h4 class="gray">2020. 11 ~ 2020. 12</h4>
                   </div>
                   <div class="col-md-9 col-12">
