--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
-                    <h4 class="gray">2020. 12 ~ </h4>
+                    <h4 class="gray">2020. 12 ~  </h4>
                   </div>
                   <div class="col-md-9 col-12">
                     <h4>42 Seoul</h4>
@@ -723,11 +723,12 @@
     $(document).ready(function () {
       var today = new Date();
       var y, m, d;
-      y = today.getFullYear();
-      m = today.getMonth();
-      d = today.getDate();
-      var lastUpdateDay = new Date(2020, m, 14);
-      var passedTime = lastUpdateDay.getTime() - today.getTime();
+      var lastUpdateDay = new Date(2021, 2, 12);
+      // month 0부터 시작하니까 지금 달 - 1값을 넣어줘야함
+      y = lastUpdateDay.getFullYear();
+      m = lastUpdateDay.getMonth();
+      d = lastUpdateDay.getDate();
+      var passedTime = today - lastUpdateDay;
       var passedDate = (Math.floor(passedTime/(24*60*60*1000)) > 0) ? Math.floor(passedTime/(24*60*60*1000)) : 0;
       $("#passedTime").html( y+". "+(m+1)+". "+d+".(D+"+passedDate+")" );
     })
