--- a/index.html
+++ b/index.html
@@ -182,22 +182,11 @@
             <h2 class="blue">INTRODUCE</h2>
           </div>
           <div class="col-12 col-md-9">
-            <p>
-              웹 백엔드 프로젝트와 FinTech Solution 프론트엔드 개발자로서의 경험이 있습니다.<br />
-              Java, Spring, Spring Boot, Oracle, Javascript, Git 등을 사용하여 서비스를 개발, 운영한 경험이 있습니다.
-            </p>
-            <p>
-              문제들을 해결할 수 있는 끈기와 대화를 좋아합니다.<br />
-              개발자라는 직업은 크고 작은 많은 문제들에 부딪히고 그것을 해결하기위해 노력하고 해결한 문제들이 재발하지 않도록 개선해야합니다.<br />
-              그 문제들을 해결하기 위해서는 물론 자신의 노력이 없으면 해결할 수 없지만 동료들과 주위 사람들의 의견을 더한다면 더욱 쉽고 좋은 방향으로 함께 문제를 풀어갈 수 있다고
-              생각합니다.<br />
-              끊임없는 도전과 주변 사람들과의 적극적인 커뮤니케이션을 유도하여 만나는 문제들을 해결하고 개선할 수 있다고 생각합니다.
-            </p>
-            <p>
-              끝없는 도전의식과 동료들과의 커뮤니케이션은 좋은 개발자가 되기위한 기반이라고 생각합니다.<br />
-              따라서 좋은 개발자가 되기 위해서 새로운 것에 대한 도전과 적응, 더 좋은 아키텍처와 패턴을 위한 끈기와 노력, 동료들과의 소통을 할 수 있는 친화력을 갖추기 위해서 노력하고
-              있습니다.<br />
-            </p>
+            <p>FinTech Solution에서의 프론트엔드 개발자로서의 경험이 있습니다.</p>
+            <p>WordPress로 되어 있던 프로젝트를 React + Python로 리팩토링을 진행한 경험이 있습니다.</p>
+            <p>AWS의 EC2, RDS를 사용하여 서비스 운영의 경험이 있습니다.</p>
+            <p>문제들을 해결에 대한 끈기를 가지고 있고 과정에서의 대화를 즐깁니다.</p>
+            <p>새로운 기술을 사용하는데에 거부감이 없고 여러 방면의 일을 하는 것을 즐깁니다.</p>
             <p class="text-md-right">
               <small>Latest Resume Updated</small>
               <span id="passedTime" class="badge badge-secondary"></span>
@@ -220,7 +209,7 @@
                   <span class="blue">
                     SKILLS
                   </span>
-                  <small data-toggle="tooltip" data-placement="right" title="1: 기초 수준,
+                  <!-- <small data-toggle="tooltip" data-placement="right" title="1: 기초 수준,
 2: 취미 개발 수준,
 3: Production 개발 가능 수준">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -231,7 +220,7 @@
                         d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448s448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40s40 17.9 40 40s-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9c12.9-18.6 30.9-32.8 52.1-40.9c34-13.1 56-41.6 56-72.7c0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                         fill="black" />
                     </svg>
-                  </small>
+                  </small> -->
                 </h2>
               </div>
             </div>
@@ -247,11 +236,16 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-primary">3</span>
-                        Java
+                        Python
                       </li>
                       <li>
-                        <span class="badge badge-pill badge-light">1</span>
+                        Flask
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li>
                         PHP
                       </li>
                     </ul>
@@ -259,59 +253,7 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-primary">3</span>
-                        Spring( Spring Boot )
-                      </li>
-                      <li>
-                        <span class="badge badge-pill badge-light">1</span>
-                        Node.js
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col">
-                    <ul>
-                      <li>
-                        <span class="badge badge-pill badge-light">2</span>
-                        AWS
-                      </li>
-                      <li>
-                        <span class="badge badge-pill badge-light">1</span>
-                        Docker
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <hr />
-            <!-- database -->
-            <div class="row">
-              <div class="col-12 col-md-3 text-md-right">
-                <h4 class="gray">Database</h4>
-              </div>
-              <div class="col-12 col-md-9">
-                <div class="row">
-                  <div class="col">
-                    <ul>
-                      <li>
-                        <span class="badge badge-pill badge-primary">3</span>
-                        Oracle
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col">
-                    <ul>
-                      <li>
-                        <span class="badge badge-pill badge-secondary">2</span>
-                        MySQL
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col">
-                    <ul>
-                      <li>
-                        <span class="badge badge-pill badge-light">1</span>
-                        MongoDB
+                        Java
                       </li>
                     </ul>
                   </div>
@@ -329,7 +271,6 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-primary">3</span>
                         HTML/CSS
                       </li>
                     </ul>
@@ -337,7 +278,6 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-secondary">2</span>
                         Javascript
                       </li>
                     </ul>
@@ -345,8 +285,74 @@
                   <div class="col">
                     <ul>
                       <li>
-                        <span class="badge badge-pill badge-secondary">2</span>
                         React.js
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <!-- database -->
+            <div class="row">
+              <div class="col-12 col-md-3 text-md-right">
+                <h4 class="gray">Database</h4>
+              </div>
+              <div class="col-12 col-md-9">
+                <div class="row">
+                  <div class="col">
+                    <ul>
+                      <li>
+                        Mysql
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li>
+                        Oracle
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li>
+                        MongoDB
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <!-- DevOps -->
+            <div class="row">
+              <div class="col-12 col-md-3 text-md-right">
+                <h4 class="gray">DevOps</h4>
+              </div>
+              <div class="col-12 col-md-9">
+                <div class="row">
+                  <div class="col">
+                    <ul>
+                      <li>
+                        Aws
+                      </li>
+                      <li>
+                        Docker
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li>
+                        Ec2
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li>
+                        RDS
                       </li>
                     </ul>
                   </div>
@@ -363,19 +369,17 @@
                 <div class="row">
                   <div class="col">
                     <ul>
-                      <li>Git / Github</li>
-                      <li>Git Bash</li>
+                      <li>Git</li>
                     </ul>
                   </div>
                   <div class="col">
                     <ul>
                       <li>Notion</li>
-                      <li>Slack</li>
                     </ul>
                   </div>
                   <div class="col">
                     <ul>
-                      <li>Eclipse</li>
+                      <li>Slack</li>
                     </ul>
                   </div>
                 </div>
@@ -396,6 +400,39 @@
               </div>
             </div>
 
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <div class="row">
+                      <div class="col-md-12 col">
+                        <h4 class="gray">2021. 09 ~</h4>
+                      </div>
+                      <div class="col-md-12 col-3 text-center text-md-right">
+                        <span class="badge badge-info">재직중</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>획기획 (제조도)</h4>
+                    <i class="gray">개발팀 풀스택 개발자</i>
+                    <ul class="pt-3">
+                      <li>자사 플랫폼 (제조도) 개발</li>
+                      <li>기존 WordPress로 제작되어 있는 자사 서비스를 Python(Flask)로 개발</li>
+                      <li>기업 의뢰 - 새로운 웹사이트 개발 및 유지보수</li>
+                      <li><strong>Skill Keywords</strong></li>
+                      <div>
+                        <span class="badge badge-secondary">Python(Flask)</span>
+                        <span class="badge badge-secondary">RestAPI</span>
+                        <span class="badge badge-secondary">Mysql</span>
+                        <span class="badge badge-secondary">AWS</span>
+                        <span class="badge badge-secondary">React</span>
+                      </div>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <div class="col">
                 <div class="row">
@@ -602,7 +639,7 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
-                    <h4 class="gray">2020. 12 ~  </h4>
+                    <h4 class="gray">2020. 12 ~  2021. 12</h4>
                   </div>
                   <div class="col-md-9 col-12">
                     <h4>42 Seoul</h4>
@@ -723,7 +760,7 @@
     $(document).ready(function () {
       var today = new Date();
       var y, m, d;
-      var lastUpdateDay = new Date(2021, 2, 12);
+      var lastUpdateDay = new Date(2022, 5, 12);
       // month 0부터 시작하니까 지금 달 - 1값을 넣어줘야함
       y = lastUpdateDay.getFullYear();
       m = lastUpdateDay.getMonth();
