--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
             <ul>
               <li>2년차 개발자 이성희입니다.</li>
               <li>서비스의 전체적인 아키텍쳐를 생각하고 개선하는 것을 좋아합니다.</li>
-              <li>서비스의 전체적인 아키텍쳐를 생각하고 개선하는 것을 좋아합니다.</li>
               <li>P2P 금융 솔루션에서 워드프레스를 사용한 프론트엔드 개발의 경험이 있습니다.</li>
               <li>WAMP로 되어있던 프로젝트를 React+Flask+Nginx+Mysql로 개선한 경험이 있습니다.</li>
-              <li>Aws Ec2, Rds, S3등 클라우드 환경에서의 운영 경험이 있습니다.</li>
+              <li>Aws EC2, RDS, S3등 클라우드 환경에서의 운영 경험이 있습니다.</li>
             </ul>
             <p class="text-md-right">
               <small>Latest Resume Updated</small>
@@ -187,7 +186,7 @@
                       <li>Python, PHP</li>
                       <!-- Framework -->
                       <li>Flask, (FastAPI)</li>
-                      <li>(pytest, monkeypatch)</li>
+                      <!-- <li>(pytest, monkeypatch)</li> -->
                       <!-- Database -->
                       <li>Mysql, Redis</li>
                     </ul>
