--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                   <div class="col-md-3 col-12 text-md-right">
                     <div class="row">
                       <div class="col-md-12 col">
-                        <h5 class="gray">2021. 09 ~</h5>
+                        <h5 class="gray">2021. 09 ~ 2022. 09</h5>
                       </div>
                       <div class="col-md-12 col-3 text-center text-md-right">
-                        <span class="badge badge-info">재직중</span>
+                        <span class="badge badge-info">1년 1개월</span>
                       </div>
                     </div>
                   </div>
