--- a/index.html
+++ b/index.html
@@ -146,11 +146,13 @@
           </div>
           <div class="col-12 col-md-9">
             <ul>
-              <li>2년차 개발자 이성희입니다.</li>
+              <li><span id="years"></span> 개발자 이성희입니다.</li>
               <li>서비스의 전체적인 아키텍쳐를 생각하고 개선하는 것을 좋아합니다.</li>
               <li>P2P 금융 솔루션에서 워드프레스를 사용한 프론트엔드 개발의 경험이 있습니다.</li>
-              <li>WAMP로 되어있던 프로젝트를 React+Flask+Nginx+Mysql로 개선한 경험이 있습니다.</li>
+              <li>WAMP로 구성된 프로젝트를 React+Flask+Nginx+Mysql로 개선한 경험이 있습니다.</li>
               <li>Aws EC2, RDS, S3등 클라우드 환경에서의 운영 경험이 있습니다.</li>
+              <li>Flutter, Firebase를 활용하여 IOS, AOS앱을 배포한 경험이 있습니다.</li>
+              <li>Flutter에 C++ native Module을 함께 적용한 경험이 있습니다.</li>
             </ul>
             <p class="text-md-right">
               <small>Latest Resume Updated</small>
@@ -183,12 +185,11 @@
                   <div class="col">
                     <ul>
                       <!-- Language -->
-                      <li>Python, PHP</li>
+                      <li>Python, Javascript(Typescript), PHP</li>
                       <!-- Framework -->
-                      <li>Flask, (FastAPI)</li>
-                      <!-- <li>(pytest, monkeypatch)</li> -->
+                      <li>Flask, FastAPI, Nodejs</li>
                       <!-- Database -->
-                      <li>Mysql, Redis</li>
+                      <li>Mysql, Mongodb ,Redis</li>
                     </ul>
                   </div>
                 </div>
@@ -217,14 +218,30 @@
             <!-- frontend -->
             <div class="row">
               <div class="col-12 col-md-3 text-md-right">
+                <h4 class="gray">Mobile</h4>
+              </div>
+              <div class="col-12 col-md-9">
+                <div class="row">
+                  <div class="col">
+                    <ul>
+                      <li>Flutter</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <!-- frontend -->
+            <div class="row">
+              <div class="col-12 col-md-3 text-md-right">
                 <h4 class="gray">Frontend</h4>
               </div>
               <div class="col-12 col-md-9">
                 <div class="row">
                   <div class="col">
                     <ul>
-                      <li>HTML5, CSS3(SCSS), JS</li>
                       <li>React</li>
+                      <li>HTML5, CSS3(SCSS), JS</li>
                     </ul>
                   </div>
                 </div>
@@ -259,6 +276,84 @@
             <div class="row pb-3">
               <div class="col">
                 <h3 class="blue">Work Experience & Proejct</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <div class="row">
+                      <div class="col-md-12 col">
+                        <h5 class="gray">2022. 10 ~ 2024. 06</h5>
+                      </div>
+                      <div class="col-md-12 col-3 text-center text-md-right">
+                        <span class="badge badge-info">1년 8개월</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>캐시티비-이비코어</h4>
+                    <i class="gray">풀스택 개발자</i>
+                    <ul class="pt-3">
+                      <li>캐시티비 모바일 앱 개발</li>
+                      <ul>
+                        <li>Flutter를 사용하여 크로스플랫폼 모바일 앱 개발</li>
+                        <li>Firebase를 활용하여 모바일 Push Notification 연동</li>
+                        <li>C++ Native Module 연동</li>
+                        <li>AppStore 및 PlayStore 배포</li>
+                        <ul>
+                          <li><a target="_blank" href="https://apps.apple.com/kr/app/%EC%BA%90%EC%8B%9C%ED%8B%B0%EB%B9%84/id6484594948">AppStore : 캐시티비</a></li>
+                          <li><a target="_blank" href="https://play.google.com/store/search?q=캐시티비&c=apps&hl=en-KR">PlayStore : 캐시티비</a></li>
+                        </ul>
+                      </ul>                        
+                      <li><strong>Skill Keywords</strong></li>
+                      <div>
+                        <span class="badge badge-secondary">Dark(Flutter)</span>
+                        <span class="badge badge-secondary">Provider</span>
+                        <span class="badge badge-secondary">Firebase</span>
+                      </div>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <div class="row">
+                      <div class="col-md-12 col">
+                        <h5 class="gray">2022. 10 ~ 2024. 06</h5>
+                      </div>
+                      <div class="col-md-12 col-3 text-center text-md-right">
+                        <span class="badge badge-info">1년 8개월</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>Prox-이비코어</h4>
+                    <i class="gray">풀스택 개발자</i>
+                    <ul class="pt-3">
+                      <li>Prox 모바일 앱 개발</li>
+                      <ul>
+                        <li>Flutter를 사용하여 크로스플랫폼 모바일 앱 개발</li>
+                        <li>Firebase를 활용하여 모바일 Push Notification 연동</li>
+                        <li>C++ Native Module 연동</li>
+                        <li>AppStore 및 PlayStore 배포</li>
+                        <ul>
+                          <li><a target="_blank" href="https://apps.apple.com/kr/app/prox/id6464463030">AppStore : Prox</a></li>
+                          <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.ebcore.bebold.bebold&pli=1">PlayStore : Prox</a></li>
+                        </ul>
+                      </ul>                        
+                      <li><strong>Skill Keywords</strong></li>
+                      <div>
+                        <span class="badge badge-secondary">Dark(Flutter)</span>
+                        <span class="badge badge-secondary">Provider</span>
+                        <span class="badge badge-secondary">Firebase</span>
+                      </div>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="row">
@@ -500,7 +595,7 @@
     $(document).ready(function () {
       var today = new Date();
       var y, m, d;
-      var lastUpdateDay = new Date(2022, 7, 23);
+      var lastUpdateDay = new Date(2024, 6, 13);
       // month 0부터 시작하니까 지금 달 - 1값을 넣어줘야함
       y = lastUpdateDay.getFullYear();
       m = lastUpdateDay.getMonth();
@@ -508,7 +603,13 @@
       var passedTime = today - lastUpdateDay;
       var passedDate = (Math.floor(passedTime/(24*60*60*1000)) > 0) ? Math.floor(passedTime/(24*60*60*1000)) : 0;
       $("#passedTime").html( y+". "+(m+1)+". "+d+".(D+"+passedDate+")" );
+
+      // 년차 계산
+      var startDate = new Date(2019, 4, 01);
+      var years = today.getFullYear() - startDate.getFullYear();
+      $("#years").html(`${years}년차`);
     })
+    
   </script>
 </body>
 
